Use `display: inline-block;` to prevent `<code>` blocks from wrapping.

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,6 +52,10 @@ a {
   cursor: pointer;
 }
 
+code {
+  display: inline-block;
+}
+
 .btn-group-lg a {
   margin: 0 5px;
 }
